chore: change region

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: 'pgrest'
     env: docker
-    region: frankfurt
+    # region: frankfurt
     plan: free
     numInstances: 1
     envVars:
